# arc-theme

./: configure.ac
debian/: changelog  control  copyright  rules  watch
debian/patches/: 01-gooroom_modify_panelbutton.patch  02-gooroom-add-applauncher-applet-scss.patch  02-gooroom_applauncher_applet.patch  03-gooroom-add-indicator-applet-scss.patch  03-gooroom_indicator_applet.patch  04-gooroom-add-integration-applet-scss.patch  04-gooroom_integration_applet.patch  05-gooroom-add-gooroom-notifyd-scss.patch  05-gooroom_notifyd.patch  06-gooroom-add-disk-space-scss.patch  06-gooroom_nautilus_disk_space.patch  series
debian/upstream/: metadata  signing-key.asc
src/: Makefile.am  index.theme
src/gtk-2.0/: gnome-flashback-gooroom.rc  gtkrc  xfce4-gooroom.rc
src/gtk-3.22/: _applications.scss  _colors.scss  _common.scss  _xfce4-gooroom.scss  gtk.scss
